changed style.css and index.html (deleted absolut positioning for block footer)

--- a/index.html
+++ b/index.html
@@ -249,32 +249,30 @@
 
     <!-- Блок c футером -->
     <footer>
-        <section class='footer-line'>
-            <section class='phone'>
-                <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
-                <div class='phone-text'>Перезвоните мне</div>
+        <section class="footer-content">
+            <section class='footer-line'>
+                <section class='phone'>
+                    <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
+                    <div class='phone-text'>Перезвоните мне</div>
+                </section>
+
+                <section class='header-logo'>
+                    <div class='logo-text'>FAMFACTORY</div>
+                    <div class='logo-title'>Швейная фабрика в Санкт-Петербурге</div>
+                </section>
+
+                <section class='email'>
+                    <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
+                    <div class='email-text'>Наша почта</div>
+                </section>
             </section>
 
-            <section class='header-logo'>
-                <div class='logo-text'>FAMFACTORY</div>
-                <div class='logo-title'>Швейная фабрика в Санкт-Петербурге</div>
-            </section>
-
-            <section class='email'>
-                <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
-                <div class='email-text'>Наша почта</div>
-            </section>
-
-            <section>
+            <section class='footer-center'>
                 <button type="button" class="footer-center-button">Отправить запрос</button>
             </section>
+
         </section>
     </footer>
-
-    <!-- Блок с большим черным контейнером: коллаборации + футер -->
-<!--    <section class='footer-black'>-->
-
-<!--    </section>-->
 
 </main>
 </body>
