changed style.css and index.html (added BEM to blocks elements)

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
 
 <header class='header'>
-        <section class='header-line'>
-            <section class='phone'>
+        <section class='header__line'>
+            <section class='header__phone'>
                 <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
-                <div class='phone-text'>Перезвоните мне</div>
+                <div class='header__phone-text'>Перезвоните мне</div>
             </section>
 
-            <section class='header-logo'>
-                <div class='logo-text'>FAMFACTORY</div>
-                <div class='logo-title'>Швейная фабрика</div>
+            <section class='header__logo'>
+                <div class='header__logo-text'>FAMFACTORY</div>
+                <div class='header__logo-title'>Швейная фабрика</div>
             </section>
 
-            <section class='email'>
-                <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
-                <div class='email-text'>Наша почта</div>
+            <section class='header__email'>
+                <a href="mailto:MAIL@FAMFACTORY.RU" class="header__email-adress">MAIL@FAMFACTORY.RU</a>
+                <div class='header__email-text'>Наша почта</div>
             </section>
         </section>
-        <section class='header-center'>
-            <div class="header-title">Сделано в Санкт-Петербурге</div>
-            <button type="button" class="header-center-button">Отправить запрос</button>
+        <section class='header__center'>
+            <div class="header__center-title">Сделано в Санкт-Петербурге</div>
+            <button type="button" class="header__center-button">Отправить запрос</button>
         </section>
 </header>
 
@@ -38,80 +38,80 @@
     <!-- Блок со вступлением и товарами -->
     <section class='intro'>
         <h1>Современный мерчендайз для бизнеса</h1>
-        <div class='intro-text'>Над реализацией проектов по разработке и производству одеждыи аксессураов трудится огромная команда профессионалов, поэтому мы можем создавать проекты любой сложности и масштабов под ключ или воплотить конкретные задачи на любом из этапов производства.</div>
+        <div class='intro__text'>Над реализацией проектов по разработке и производству одеждыи аксессураов трудится огромная команда профессионалов, поэтому мы можем создавать проекты любой сложности и масштабов под ключ или воплотить конкретные задачи на любом из этапов производства.</div>
     </section>    
     <section class='products'>
-        <section class='product-cart'>
+        <section class='product'>
             <img src='assets/images/hudi.png' alt='Худи'>
-            <div class="text-container">
-                <span class="title">Худи</span>
-                <span class="price">от 1650 ₽</span>
+            <div class="product__info">
+                <span class="product__title">Худи</span>
+                <span class="product__price">от 1650 ₽</span>
             </div>
         </section>
-        <section class='product-cart'>
+        <section class='product'>
             <img src='assets/images/futbolki.png' alt='Футболки'>
-            <div class="text-container">
-                <span class="title">Футболки</span>
-                <span class="price">от 510 ₽</span>
+            <div class="product__info">
+                <span class="product__title">Футболки</span>
+                <span class="product__price">от 510 ₽</span>
             </div>
         </section>
-        <section class='product-cart'>
+        <section class='product'>
             <img src='assets/images/sweetshot.png' alt='Свитшоты'>
-            <div class="text-container">
-                <span class="title">Свитшоты</span>
-                <span class="price">от 890 ₽</span>
+            <div class="product__info">
+                <span class="product__title">Свитшоты</span>
+                <span class="product__price">от 890 ₽</span>
             </div>
         </section>
-        <section class='product-cart'>
+        <section class='product'>
             <img src='assets/images/shtany.png' alt='Штаны'>
-            <div class="text-container">
-                <span class="title">Штаны</span>
-                <span class="price">от 1230 ₽</span>
+            <div class="product__info">
+                <span class="product__title">Штаны</span>
+                <span class="product__price">от 1230 ₽</span>
             </div>
         </section>
-        <section class='product-cart'>
+        <section class='product'>
             <img src='assets/images/shopery.png' alt='Шопперы'>
-            <div class="text-container">
-                <span class="title">Шопперы</span>
-                <span class="price">от 330 ₽</span>
+            <div class="product__info">
+                <span class="product__title">Шопперы</span>
+                <span class="product__price">от 330 ₽</span>
             </div>
         </section>
-        <section class='product-cart'>
+        <section class='product'>
             <img src='assets/images/kepki.png' alt='Кепки'>
-            <div class="text-container">
-                <span class="title">Кепки</span>
-                <span class="price">от 400 ₽</span>
+            <div class="product__info">
+                <span class="product__title">Кепки</span>
+                <span class="product__price">от 400 ₽</span>
             </div>
         </section>
     </section>
     <!-- Блок с видео-->
-    <section class='video-section'>
-        <p class='video-section-p'>Презентация нашей коллекции одежды 2021</p>
-        <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video-background">
+    <section class='video'>
+        <p class='video__description'>Презентация нашей коллекции одежды 2021</p>
+        <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video__background">
 
-        <section class="video-overlay">
-        <button type="button" class="play-button"></button>
+        <section class="video__overlay">
+        <button type="button" class="video__play-button"></button>
         </section>
     </section>
     <!-- Блок с производством для компаний и брендов -->
-    <section class='cooperation-container'>
-        <section class='cooperation-intro'>
+    <section class='cooperation__container'>
+        <section class='cooperation__intro'>
             <h2>Производство одежды для компаний, брендов, артистов</h2>
-            <p class='cooperation-text'>Наша команда по разработке и производству одежды может реализовать проекты любой сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или решить конкретные задачи на любом из этапов производства.
+            <p class='cooperation__text'>Наша команда по разработке и производству одежды может реализовать проекты любой сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или решить конкретные задачи на любом из этапов производства.
             </p>
         </section>
         <section class='cooperations'>
-            <section class='cooperation-cart'>
+            <section class='cooperations__cart'>
                 <img src='assets/images/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
                 <h3>Разработка лекал и дизайна</h3>
                 <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
             </section>
-            <section class='cooperation-cart'>
+            <section class='cooperations__cart'>
                 <img src='assets/images/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
                 <h3>Пошив одежды на заказ</h3>
                 <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
             </section>
-            <section class='cooperation-cart'>
+            <section class='cooperations__cart'>
                 <img src='assets/images/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
                 <h3>Бренд одежды под ключ</h3>
                 <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
@@ -119,17 +119,17 @@
         </section>
     </section>
     <!-- Блок со способами нанесения -->
-    <section class='prints-techniques-container'>
-        <section class='prints-techniques-intro'>
+    <section class='prints-techniques__container'>
+        <section class='prints-techniques__intro'>
             <h2>Способы нанесения принтов и вышивки</h2>
         </section>
         <section class='prints-techniques'>
-            <section class='prints-techniques-cart'>
+            <section class='prints-techniques__cart'>
                 <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
                 <h3>Шелкография</h3>
                 <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
             </section>
-            <section class='prints-techniques-cart'>
+            <section class='prints-techniques__cart'>
                 <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
                 <h3>Вышивка на одежде</h3>
                 <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.</p>
@@ -138,68 +138,68 @@
     </section>
     <!-- Блок о реализации -->
     <section class='realisation'>
-        <section class='realisation-overlay'>
-            <p class='realisation-h2'>Если у вас есть свои товары, мы можем вам помочь реализовать их.</p>
-            <p class='realisation-p'>Разместим Ваши товары на сайте vsrap.com и в офлайн-магазинах «VSRAP». Осуществим обработку заказов и их отправку. Каждое предложение мы рассматриваем индивидуально.</p>
+        <section class='realisation__overlay'>
+            <p class='realisation__h2'>Если у вас есть свои товары, мы можем вам помочь реализовать их.</p>
+            <p class='realisation__description'>Разместим Ваши товары на сайте vsrap.com и в офлайн-магазинах «VSRAP». Осуществим обработку заказов и их отправку. Каждое предложение мы рассматриваем индивидуально.</p>
         </section>
     </section>
     <!-- Блок со схемой работы -->
-    <section class="scheme-of-work-container">
-        <p class='scheme-of-work-h2'>Схема работы с нами</p>
-        <p class="scheme-of-work-p">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
+    <section class="scheme-of-work__container">
+        <p class='scheme-of-work__h2'>Схема работы с нами</p>
+        <p class="scheme-of-work__description">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
         <section class="steps">
             <section class="step">
-                <img class="step-icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
-                <p class="step-text">Отправляете заявку или звоните +7 (911) 109-97-07</p>
+                <img class="step__icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
+                <p class="step__text">Отправляете заявку или звоните +7 (911) 109-97-07</p>
             </section>
             <section class="step">
-                <img class="step-icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
-                <p class="step-text">Разрабатываем лекала и шьём образец</p>
+                <img class="step__icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
+                <p class="step__text">Разрабатываем лекала и шьём образец</p>
             </section>
             <section class="step">
-                <img class="step-icon" src="assets/images/step_3.svg" alt="Наносим принт" >
-                <p class="step-text">Шьём тираж и наносим принт или вышивку</p>
+                <img class="step__icon" src="assets/images/step_3.svg" alt="Наносим принт" >
+                <p class="step__text">Шьём тираж и наносим принт или вышивку</p>
             </section>
             <section class="step">
-                <img class="step-icon" src="assets/images/step_4.svg" alt="Упаковываем" >
-                <p class="step-text">Упаковываем и отгружаем партию</p>
+                <img class="step__icon" src="assets/images/step_4.svg" alt="Упаковываем" >
+                <p class="step__text">Упаковываем и отгружаем партию</p>
             </section>
         </section>
     </section>
     <!-- Блок о производстве -->
-    <section class='actual-manufacturing-container'>
-        <section class='actual-manufacturing-intro'>
+    <section class='actual-manufacturing__container'>
+        <section class='actual-manufacturing__intro'>
             <h2>Все вещи мы шьём на собственном производстве в Санкт-Петербурге по собственному дизайну и крою</h2>
             <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём в онлайн и через собственные розничные магазины в Питере и Москве.</p>
         </section>
         <section class='actual-manufacturing'>
-            <section class='actual-manufacturing-cart'>
+            <section class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9324.png' alt=''>
             </section>
-            <section class='actual-manufacturing-cart'>
+            <section class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9381.png' alt=''>
             </section>
-            <section class='actual-manufacturing-cart'>
+            <section class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9394.png' alt=''>
             </section>
-            <section class='actual-manufacturing-cart'>
+            <section class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9344.png' alt=''>
             </section>
-            <section class='actual-manufacturing-cart'>
+            <section class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_94281.png' alt=''>
             </section>
-            <section class='actual-manufacturing-cart'>
+            <section class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_93812.png' alt=''>
             </section>
         </section>
     </section>
     <!-- Блок с адресами магазинов -->
-    <section class="shops-block">
-        <section class="shops-container">
+    <section class="shops">
+        <section class="shops__container">
             <h2>Магазины в самом центре Питера и Москвы</h2>
             <p>Мы можем организовать реализацию вашего товара, не только в онлайне, но и в наших розничных магазинах.</p>
         </section>
-        <section class="shops-locations">
+        <section class="shops__locations">
             <div class="shop-location">
                 <img src="assets/style/shop_spb.png" alt="Магазин в Санкт-Петербурге">
                 <p>Санкт-Петербург <br> Лиговский проспект 64</p>
@@ -211,37 +211,37 @@
         </section>
     </section>
     <!-- Блок о коллаборациях -->
-    <section class='collaborations-block'>
-        <section class='collaborations-container'>
+    <section class='collaborations'>
+        <section class='collaborations__container'>
             <h2>Наши коллаборации</h2>
             <p>С нами уже самые топовые инфлюенсеры. </p>
         </section>
-        <section class='collaborations-grid'>
-            <div class='collaborations-grid-cart'>
+        <section class='collaborations__grid'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/1416065832_6.png' alt='Коллаборация 1'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/1416065832_5.png' alt='Коллаборация 2'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/Group_10.png' alt='Коллаборация 3'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/IMG_9232_Ed1it_2.png' alt='Коллаборация 4'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/IMG_1067_1.png' alt='Коллаборация 5'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/IMG_9170_1.png' alt='Коллаборация 6'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/football_4_1.png' alt='Коллаборация 7'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/image_17.png' alt='Коллаборация 8'>
             </div>
-            <div class='collaborations-grid-cart'>
+            <div class='collaborations__grid-cart'>
                 <img src='assets/images/danick_10_1.png' alt='Коллаборация 9'>
             </div>
         </section>
@@ -249,26 +249,26 @@
 
     <!-- Блок c футером -->
     <footer>
-        <section class="footer-content">
-            <section class='footer-line'>
-                <section class='phone'>
+        <section class="footer__content">
+            <section class='footer__line'>
+                <section class='footer__phone'>
                     <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
-                    <div class='phone-text'>Перезвоните мне</div>
+                    <div class='footer__phone-text'>Перезвоните мне</div>
                 </section>
 
-                <section class='header-logo'>
-                    <div class='logo-text'>FAMFACTORY</div>
-                    <div class='logo-title'>Швейная фабрика в Санкт-Петербурге</div>
+                <section class='header__logo'>
+                    <div class='header__logo-text'>FAMFACTORY</div>
+                    <div class='header__logo-title'>Швейная фабрика в Санкт-Петербурге</div>
                 </section>
 
-                <section class='email'>
-                    <a href="mailto:MAIL@FAMFACTORY.RU" class="email-adress">MAIL@FAMFACTORY.RU</a>
-                    <div class='email-text'>Наша почта</div>
+                <section class='footer__email'>
+                    <a href="mailto:MAIL@FAMFACTORY.RU" class="footer__email-adress">MAIL@FAMFACTORY.RU</a>
+                    <div class='footer__email-text'>Наша почта</div>
                 </section>
             </section>
 
-            <section class='footer-center'>
-                <button type="button" class="footer-center-button">Отправить запрос</button>
+            <section class='footer__center'>
+                <button type="button" class="footer__center-button">Отправить запрос</button>
             </section>
 
         </section>
