changed index.html and style.css (reused header__center-button element in the footer block)

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </section>
 
             <section class='footer__center'>
-                <button type="button" class="footer__center-button">Отправить запрос</button>
+                <button type="button" class="header__center-button">Отправить запрос</button>
             </section>
 
         </section>
