--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <body>
 
 <header class='header'>
-        <section class='header__line'>
-            <section class='header__phone'>
+        <div class='header__line'>
+            <div class='header__phone'>
                 <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
                 <div class='header__phone-text'>Перезвоните мне</div>
-            </section>
+            </div>
 
-            <section class='header__logo'>
+            <div class='header__logo'>
                 <div class='header__logo-text'>FAMFACTORY</div>
                 <div class='header__logo-title'>Швейная фабрика</div>
-            </section>
+            </div>
 
-            <section class='header__email'>
+            <div class='header__email'>
                 <a href="mailto:MAIL@FAMFACTORY.RU" class="header__email-adress">MAIL@FAMFACTORY.RU</a>
                 <div class='header__email-text'>Наша почта</div>
-            </section>
-        </section>
+            </div>
+        </div>
         <section class='header__center'>
             <div class="header__center-title">Сделано в Санкт-Петербурге</div>
             <button type="button" class="header__center-button">Отправить запрос</button>
@@ -249,29 +249,29 @@
 
     <!-- Блок c футером -->
     <footer>
-        <section class="footer__content">
-            <section class='footer__line'>
-                <section class='footer__phone'>
+        <div class="footer__content">
+            <div class='footer__line'>
+                <div class='footer__phone'>
                     <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
                     <div class='footer__phone-text'>Перезвоните мне</div>
-                </section>
+                </div>
 
-                <section class='header__logo'>
+                <div class='header__logo'>
                     <div class='header__logo-text'>FAMFACTORY</div>
                     <div class='header__logo-title'>Швейная фабрика в Санкт-Петербурге</div>
-                </section>
+                </div>
 
-                <section class='footer__email'>
+                <div class='footer__email'>
                     <a href="mailto:MAIL@FAMFACTORY.RU" class="footer__email-adress">MAIL@FAMFACTORY.RU</a>
                     <div class='footer__email-text'>Наша почта</div>
-                </section>
-            </section>
+                </div>
+            </div>
 
-            <section class='footer__center'>
+            <div class='footer__center'>
                 <button type="button" class="header__center-button">Отправить запрос</button>
-            </section>
+            </div>
 
-        </section>
+        </div>
     </footer>
 
 </main>
