changed index.html and style.css (deleted spaces from phone numbers in blocks header and footer, also added button with type button under phone number)

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header class='header'>
         <div class='header__line'>
             <div class='header__phone'>
-                <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
-                <div class='header__phone-text'>Перезвоните мне</div>
+                <a href="tel:+79253431696" class="number">+79253431696</a>
+                <button type="button" class="header__phone-text-button">Перезвоните мне</button>
             </div>
 
             <div class='header__logo'>
@@ -252,8 +252,8 @@
         <div class="footer__content">
             <div class='footer__line'>
                 <div class='footer__phone'>
-                    <a href="tel:+7 925 343 16 96" class="number">+7 925 343 16 96</a>
-                    <div class='footer__phone-text'>Перезвоните мне</div>
+                    <a href="tel:+7925431696" class="number">+79253431696</a>
+                    <button type="button" class="footer__phone-text-button">Перезвоните мне</button>
                 </div>
 
                 <div class='header__logo'>
