changed index.html and style.css (corrected BEM names for block cooperation)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </section>
     </section>
     <!-- Блок с производством для компаний и брендов -->
-    <section class='cooperation__container'>
+    <section class='cooperation'>
         <section class='cooperation__intro'>
             <h2>Производство одежды для компаний, брендов, артистов</h2>
             <p class='cooperation__text'>Наша команда по разработке и производству одежды может реализовать проекты любой сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или решить конкретные задачи на любом из этапов производства.
