--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <section class='header__center'>
             <div class="header__center-title">Сделано в Санкт-Петербурге</div>
-            <button type="button" class="header__center-button">Отправить запрос</button>
+            <button type="button" class="button">Отправить запрос</button>
         </section>
 </header>
 
@@ -268,7 +268,7 @@
             </div>
 
             <div class='footer__center'>
-                <button type="button" class="header__center-button">Отправить запрос</button>
+                <button type="button" class="button">Отправить запрос</button>
             </div>
 
         </div>
