changed index.html (deleted extra section blocks)

--- a/index.html
+++ b/index.html
@@ -41,57 +41,57 @@
         <div class='intro__text'>Над реализацией проектов по разработке и производству одеждыи аксессураов трудится огромная команда профессионалов, поэтому мы можем создавать проекты любой сложности и масштабов под ключ или воплотить конкретные задачи на любом из этапов производства.</div>
     </section>    
     <section class='products'>
-        <section class='product'>
+        <div class='product'>
             <img src='assets/images/hudi.png' alt='Худи'>
             <div class="product__info">
                 <span class="product__title">Худи</span>
                 <span class="product__price">от 1650 ₽</span>
             </div>
-        </section>
-        <section class='product'>
+        </div>
+        <div class='product'>
             <img src='assets/images/futbolki.png' alt='Футболки'>
             <div class="product__info">
                 <span class="product__title">Футболки</span>
                 <span class="product__price">от 510 ₽</span>
             </div>
-        </section>
-        <section class='product'>
+        </div>
+        <div class='product'>
             <img src='assets/images/sweetshot.png' alt='Свитшоты'>
             <div class="product__info">
                 <span class="product__title">Свитшоты</span>
                 <span class="product__price">от 890 ₽</span>
             </div>
-        </section>
-        <section class='product'>
+        </div>
+        <div class='product'>
             <img src='assets/images/shtany.png' alt='Штаны'>
             <div class="product__info">
                 <span class="product__title">Штаны</span>
                 <span class="product__price">от 1230 ₽</span>
             </div>
-        </section>
-        <section class='product'>
+        </div>
+        <div class='product'>
             <img src='assets/images/shopery.png' alt='Шопперы'>
             <div class="product__info">
                 <span class="product__title">Шопперы</span>
                 <span class="product__price">от 330 ₽</span>
             </div>
-        </section>
-        <section class='product'>
+        </div>
+        <div class='product'>
             <img src='assets/images/kepki.png' alt='Кепки'>
             <div class="product__info">
                 <span class="product__title">Кепки</span>
                 <span class="product__price">от 400 ₽</span>
             </div>
-        </section>
+        </div>
     </section>
     <!-- Блок с видео-->
     <section class='video'>
         <p class='video__description'>Презентация нашей коллекции одежды 2021</p>
         <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video__background">
 
-        <section class="video__overlay">
-        <button type="button" class="video__play-button"></button>
-        </section>
+        <div class="video__overlay">
+            <button type="button" class="video__play-button"></button>
+        </div>
     </section>
     <!-- Блок с производством для компаний и брендов -->
     <section class='cooperation'>
@@ -101,21 +101,21 @@
             </p>
         </section>
         <section class='cooperations'>
-            <section class='cooperations__cart'>
+            <div class='cooperations__cart'>
                 <img src='assets/images/patternmaking-los-angeles 1.png' alt='Разработка лекал и дизайна'>
                 <h3>Разработка лекал и дизайна</h3>
                 <p>Поможем создать уникальные лекала для вашей одежды или адаптировать уже имеющиеся. Разработаем индивидуальный дизайн ваших товаров</p>
-            </section>
-            <section class='cooperations__cart'>
+            </div>
+            <div class='cooperations__cart'>
                 <img src='assets/images/cut-and-sew-sample-making 1.png' alt='Пошив одежды на заказ'>
                 <h3>Пошив одежды на заказ</h3>
                 <p>Пошив трикотажных изделий любой сложности и в любых объемах, как по вашим образцам, так и по нашим базовым лекалам</p>
-            </section>
-            <section class='cooperations__cart'>
+            </div>
+            <div class='cooperations__cart'>
                 <img src='assets/images/sustainable-clothing-sample-production 1.png' alt='Бренд одежды под ключ'>
                 <h3>Бренд одежды под ключ</h3>
                 <p>Поможем разработать линейку одежды для вашего бренда, от пошива до реализации.</p>
-            </section>
+            </div>
         </section>
     </section>
     <!-- Блок со способами нанесения -->
@@ -124,46 +124,46 @@
             <h2>Способы нанесения принтов и вышивки</h2>
         </section>
         <section class='prints-techniques'>
-            <section class='prints-techniques__cart'>
+            <div class='prints-techniques__cart'>
                 <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
                 <h3>Шелкография</h3>
                 <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
-            </section>
-            <section class='prints-techniques__cart'>
+            </div>
+            <div class='prints-techniques__cart'>
                 <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
                 <h3>Вышивка на одежде</h3>
                 <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.</p>
-            </section>
+            </div>
         </section>
     </section>
     <!-- Блок о реализации -->
     <section class='realisation'>
-        <section class='realisation__overlay'>
+        <div class='realisation__overlay'>
             <p class='realisation__h2'>Если у вас есть свои товары, мы можем вам помочь реализовать их.</p>
             <p class='realisation__description'>Разместим Ваши товары на сайте vsrap.com и в офлайн-магазинах «VSRAP». Осуществим обработку заказов и их отправку. Каждое предложение мы рассматриваем индивидуально.</p>
-        </section>
+        </div>
     </section>
     <!-- Блок со схемой работы -->
     <section class="scheme-of-work__container">
         <p class='scheme-of-work__h2'>Схема работы с нами</p>
         <p class="scheme-of-work__description">К каждому проекту мы подходим индивидуально. Свяжитесь с нами и мы поможем реализовать ваши идеи.</p>
         <section class="steps">
-            <section class="step">
+            <div class="step">
                 <img class="step__icon" src="assets/images/step_1.svg" alt="Отправляете заявку" >
                 <p class="step__text">Отправляете заявку или звоните +7 (911) 109-97-07</p>
-            </section>
-            <section class="step">
+            </div>
+            <div class="step">
                 <img class="step__icon" src="assets/images/step_2.svg" alt="Разрабатываем лекала" >
                 <p class="step__text">Разрабатываем лекала и шьём образец</p>
-            </section>
-            <section class="step">
+            </div>
+            <div class="step">
                 <img class="step__icon" src="assets/images/step_3.svg" alt="Наносим принт" >
                 <p class="step__text">Шьём тираж и наносим принт или вышивку</p>
-            </section>
-            <section class="step">
+            </div>
+            <div class="step">
                 <img class="step__icon" src="assets/images/step_4.svg" alt="Упаковываем" >
                 <p class="step__text">Упаковываем и отгружаем партию</p>
-            </section>
+            </div>
         </section>
     </section>
     <!-- Блок о производстве -->
@@ -173,24 +173,24 @@
             <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём в онлайн и через собственные розничные магазины в Питере и Москве.</p>
         </section>
         <section class='actual-manufacturing'>
-            <section class='actual-manufacturing__cart'>
+            <div class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9324.png' alt=''>
-            </section>
-            <section class='actual-manufacturing__cart'>
+            </div>
+            <div class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9381.png' alt=''>
-            </section>
-            <section class='actual-manufacturing__cart'>
+            </div>
+            <div class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9394.png' alt=''>
-            </section>
-            <section class='actual-manufacturing__cart'>
+            </div>
+            <div class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_9344.png' alt=''>
-            </section>
-            <section class='actual-manufacturing__cart'>
+            </div>
+            <div class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_94281.png' alt=''>
-            </section>
-            <section class='actual-manufacturing__cart'>
+            </div>
+            <div class='actual-manufacturing__cart'>
                 <img src='assets/images/IMG_93812.png' alt=''>
-            </section>
+            </div>
         </section>
     </section>
     <!-- Блок с адресами магазинов -->
