changed index.html and style.css (created a separate call_me_button class for text under the phone number )

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class='header__line'>
             <div class='header__phone'>
                 <a href="tel:+79253431696" class="number">+79253431696</a>
-                <button type="button" class="header__phone-text-button">Перезвоните мне</button>
+                <button type="button" class="call_me_button">Перезвоните мне</button>
             </div>
 
             <div class='header__logo'>
@@ -253,7 +253,7 @@
             <div class='footer__line'>
                 <div class='footer__phone'>
                     <a href="tel:+7925431696" class="number">+79253431696</a>
-                    <button type="button" class="footer__phone-text-button">Перезвоните мне</button>
+                    <button type="button" class="call_me_button">Перезвоните мне</button>
                 </div>
 
                 <div class='header__logo'>
