changed index.html and style.css (added one bem block for sections with titles and subtitles)

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </section>
     <!-- Блок с производством для компаний и брендов -->
     <section class='cooperation'>
-        <section class='cooperation__intro'>
+        <section class='section-block cooperation__intro'>
             <h2>Производство одежды для компаний, брендов, артистов</h2>
             <p class='cooperation__text'>Наша команда по разработке и производству одежды может реализовать проекты любой сложности, независимо от их масштаба. Мы можем взять на себя всю работу под ключ, или решить конкретные задачи на любом из этапов производства.
             </p>
@@ -120,7 +120,7 @@
     </section>
     <!-- Блок со способами нанесения -->
     <section class='prints-techniques__container'>
-        <section class='prints-techniques__intro'>
+        <section class='section-block'>
             <h2>Способы нанесения принтов и вышивки</h2>
         </section>
         <section class='prints-techniques'>
@@ -168,7 +168,7 @@
     </section>
     <!-- Блок о производстве -->
     <section class='actual-manufacturing__container'>
-        <section class='actual-manufacturing__intro'>
+        <section class='section-block'>
             <h2>Все вещи мы шьём на собственном производстве в Санкт-Петербурге по собственному дизайну и крою</h2>
             <p>А наши коллекции сделанные совместно с топовыми блогерами и артистами продаём в онлайн и через собственные розничные магазины в Питере и Москве.</p>
         </section>
@@ -195,7 +195,7 @@
     </section>
     <!-- Блок с адресами магазинов -->
     <section class="shops">
-        <section class="shops__container">
+        <section class="section-block">
             <h2>Магазины в самом центре Питера и Москвы</h2>
             <p>Мы можем организовать реализацию вашего товара, не только в онлайне, но и в наших розничных магазинах.</p>
         </section>
