--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <main>
     <section class='header__center'>
+        <img src="assets/images/bg.png" alt="Фоновое изображение" class="header__center-bg">
         <div class="header__center-title">Сделано в Санкт-Петербурге</div>
         <button type="button" class="button">Отправить запрос</button>
     </section>
