changed index.html and style.css (edited bem errors in prints-techniques block)

--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
         </section>
     </section>
     <!-- Блок со способами нанесения -->
-    <section class='prints-techniques__container'>
+    <section class='prints-techniques'>
         <section class='section-block'>
             <h2>Способы нанесения принтов и вышивки</h2>
         </section>
-        <section class='prints-techniques'>
-            <div class='prints-techniques__cart'>
+        <section class='prints-techniques__content'>
+            <div class='prints-techniques__content-cart'>
                 <img src='assets/images/Screen-Printing-Adamley-Textiles 1.png' alt='Шелкография'>
                 <h3>Шелкография</h3>
                 <p>Трафаретная печать подходит для нанесения почти на любых изделиях: футболках, толстовках, свитшотах и т.д. Принты, сделанные данным способом имеют высокую износостойкость, не требуют особого ухода и прослужат довольно долго.</p>
             </div>
-            <div class='prints-techniques__cart'>
+            <div class='prints-techniques__content-cart'>
                 <img src='assets/images/embroidery-machine-fox-detail 1.png' alt='Вышивка на одежде'>
                 <h3>Вышивка на одежде</h3>
                 <p>Один из самых интересных способов нанесения изображения на одежду. Вышивка долговечна, без проблем переносит механические воздействия. Данный вид нанесения выглядит наиболее эффектно и прослужит дольше всего.</p>
