changes paths for images to assets/images/

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- Блок с видео-->
     <section class='video'>
         <p class='video__description'>Презентация нашей коллекции одежды 2021</p>
-        <img src="assets/style/presentation-anonce.png" alt="Video thumbnail" class="video__background">
+        <img src="assets/images/presentation-anonce.png" alt="Video thumbnail" class="video__background">
 
         <div class="video__overlay">
             <button type="button" class="video__play-button"></button>
@@ -202,11 +202,11 @@
         </section>
         <section class="shops__locations">
             <div class="shop-location">
-                <img src="assets/style/shop_spb.png" alt="Магазин в Санкт-Петербурге">
+                <img src="assets/images/shop_spb.png" alt="Магазин в Санкт-Петербурге">
                 <p>Санкт-Петербург <br> Лиговский проспект 64</p>
             </div>
             <div class="shop-location">
-                <img src="assets/style/shop_msk.png" alt="Магазин в Москве">
+                <img src="assets/images/shop_msk.png" alt="Магазин в Москве">
                 <p>Москва <br> Петровский бульвар 9</p>
             </div>
         </section>
